objects/Apple_Config__c.object
<CustomObject>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Url__c</fullName>
        <label>Start Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID2__c</fullName>
        <label>UUID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apple Config</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apple Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>